[workspace]
members = [
    "libraries/*",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anyhow = "1.0.86"
rust_decimal = "1.26.1"
spl-token = { version = "3", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4",  features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"] }
num-traits = "0.2"
thiserror = "1.0"
typenum = "1.17.0"
fixed = "1.12.0"
