[package]
name = "stabble-stable-swap"
version = "1.1.0"
edition = "2021"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
stabble-vault = { path = "../vault" }
